송민 디테일 수정완

--- a/src/main/resources/templates/content/statistics/statistics.html
+++ b/src/main/resources/templates/content/statistics/statistics.html
@@ -71,18 +71,19 @@
                                 <div class="col" style="font-size: 22px; font-weight: bold;">화재 발생건수</div>
                                 <div class="col mb-4" style="font-size: 18px; font-weight: bold;">
                                     <span class="badge bg-danger-subtle rounded-0 " style="color: black;">평균</span>
-                                    <span>[[${totalOccAndProperty3[3]}]]건</span>
+                                    <span>[[${totalOccAndProperty3[3]}]]</span>
+                                    <span class="text-secondary" style="font-size: 12px;"> [단위 : 건]</span>
                                 </div>
                                 <div class="col">
                                     <span class="badge text-bg-secondary rounded-0 "
                                         style="font-size: 12px;">2021년</span>
-                                    <span style="font-size: 0.9rem;">[[${totalOccAndProperty3[0]}]]건</span>
+                                    <span style="font-size: 0.9rem;">[[${totalOccAndProperty3[0]}]]</span>
                                     <span class="badge text-bg-secondary rounded-0 "
                                         style="font-size: 12px;">2022년</span>
-                                    <span style="font-size: 0.9rem;">[[${totalOccAndProperty3[1]}]]건</span>
+                                    <span style="font-size: 0.9rem;">[[${totalOccAndProperty3[1]}]]</span>
                                     <span class="badge text-bg-secondary rounded-0 "
                                         style="font-size: 12px;">2023년</span>
-                                    <span style="font-size: 0.9rem;">[[${totalOccAndProperty3[2]}]]건</span>
+                                    <span style="font-size: 0.9rem;">[[${totalOccAndProperty3[2]}]]</span>
                                 </div>
                             </div>
                         </div>
@@ -102,18 +103,19 @@
                                 <div class="col" style="font-size: 22px; font-weight: bold;">화재 인명피해</div>
                                 <div class="col mb-4" style="font-size: 18px; font-weight: bold;">
                                     <span class="badge bg-danger-subtle rounded-0 " style="color: black;">평균</span>
-                                    [[${totalLifeDmg2[3]}]]명
+                                    [[${totalLifeDmg2[3]}]]
+                                    <span class="text-secondary" style="font-size: 12px;"> [단위 : 명]</span>
                                 </div>
                                 <div class="col">
                                     <span class="badge text-bg-secondary rounded-0 "
                                         style="font-size: 12px;">2021년</span>
-                                    <span style="font-size: 0.9rem;">[[${totalLifeDmg2[0]}]]명</span>
+                                    <span style="font-size: 0.9rem;">[[${totalLifeDmg2[0]}]]</span>
                                     <span class="badge text-bg-secondary rounded-0 "
                                         style="font-size: 12px;">2022년</span>
-                                    <span style="font-size: 0.9rem;">[[${totalLifeDmg2[1]}]]명</span>
+                                    <span style="font-size: 0.9rem;">[[${totalLifeDmg2[1]}]]</span>
                                     <span class="badge text-bg-secondary rounded-0 "
                                         style="font-size: 12px;">2023년</span>
-                                    <span style="font-size: 0.9rem;">[[${totalLifeDmg2[2]}]]명</span>
+                                    <span style="font-size: 0.9rem;">[[${totalLifeDmg2[2]}]]</span>
                                 </div>
                             </div>
                         </div>
@@ -172,18 +174,19 @@
                                         <span class="badge bg-danger-subtle rounded-0 " style="color: black;">지역</span>
                                         <span class="me-2">[[${totalLocalDmg[0].victimSido}]]</span>
                                         <span class="badge bg-danger-subtle rounded-0 " style="color: black;">평균</span>
-                                        <span>[[${totalLocalDmg2[3]}]]건</span>
+                                        <span>[[${totalLocalDmg2[3]}]]</span>
+                                        <span class="text-secondary" style="font-size: 12px;"> [단위 : 건]</span>
                                     </div>
                                     <div class="col">
                                         <span class="badge text-bg-secondary rounded-0 "
                                             style="font-size: 12px;">2021년</span>
-                                        <span style="font-size: 0.9rem">[[${totalLocalDmg2[0]}]]건</span>
+                                        <span style="font-size: 0.9rem">[[${totalLocalDmg2[0]}]]</span>
                                         <span class="badge text-bg-secondary rounded-0 "
                                             style="font-size: 12px;">2022년</span>
-                                        <span style="font-size: 0.9rem">[[${totalLocalDmg2[1]}]]건</span>
+                                        <span style="font-size: 0.9rem">[[${totalLocalDmg2[1]}]]</span>
                                         <span class="badge text-bg-secondary rounded-0 "
                                             style="font-size: 12px;">2023년</span>
-                                        <span style="font-size: 0.9rem">[[${totalLocalDmg2[2]}]]건</span>
+                                        <span style="font-size: 0.9rem">[[${totalLocalDmg2[2]}]]</span>
                                     </div>
                                 </div>
                             </div>
